fix images on mobile/tablet view

--- a/source/sass/blocks/bicycles.scss
+++ b/source/sass/blocks/bicycles.scss
@@ -155,7 +155,7 @@
 
   .bicycles img {
     border-radius: 10px;
-    object-fit: cover;
+    object-fit: fill;
     width: 35.2vw;
     height: 39.07vw;
   }
